--- a/index.html
+++ b/index.html
@@ -6,35 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Информация о программе "Информационные системы и технологии" для абитурентов</title>
-    <style type="text/css">
-        /*правило для элементов main*/
-        main {
-            margin-left: 30px;
-            margin-right: 30px;
-        }
-        /*правило для элементов относящихся к классу a_footer*/
-        .a_footer {
-            display: block;
-        }
-        h1 {
-            text-align: center;
-            padding: 20px 10px 0px 0px;
-        }
-        /*подключаем картинку для шапки*/
-        header {
-            background: url('https://d626yq9e83zk1.cloudfront.net/files/2017/12/26-770x425.jpg') bottom center no-repeat;
-            background-size: 100%;
-            width: 100%;
-            height: 150px;
-            color: white;
-            text-align: center;
-        }
-        adress {
-            text-align: center;
-        }
-    </style>
-</head>
+    <link rel ="stylesheet" href="Style.css" />
 
+
+
+</head>
 <body>
     <main>
         <article>
@@ -71,9 +47,7 @@
             </section>
             <section>
                 <h2>Кем работают наши выпускники: </h2>
-                <table>
-                <td>
-                <ul>
+                <ul style="display:inline block">
                     <li>Разработчик ПО</li>
                     <li>Web-разработчик</li>
                     <li>1С-разработчик</li>
@@ -81,10 +55,8 @@
                     <li>UX-специалист</li>
                     <li>Системный аналитик</li>
                     <li>Data Engineer</li>
-                </ul>
-                </td>
-                <td>
-                <ul>
+                    </ul>
+                    <ul style="display:inline block">
                     <li>Data Scientist</li>
                     <li>QA-специалист</li>
                     <li>Менеджер ИТ-проектов</li>
@@ -93,8 +65,6 @@
                     <li>Android/iOS-разработчик</li>
                     <li>VR-разработчик</li>
                 </ul>
-                </td>
-                </table>
             </section>
         <section>
             <h2>Лучшие выпускники ИРНИТУ 2022</h2>
